created separate files to manage all the chapters

--- a/latex_thesis/document.tex
+++ b/latex_thesis/document.tex
@@ -53,6 +53,10 @@
 \tableofcontents
 
 \input{parts/chapter1}
+\input{parts/chapter2}
+\input{parts/chapter3}
+\input{parts/chapter4}
+\input{parts/chapter5}
 
 \input{parts/conclusion}
 
