first write of chapter2 about state of art

--- a/latex_thesis/document.tex
+++ b/latex_thesis/document.tex
@@ -9,7 +9,7 @@
 \usepackage[font=small,labelfont=bf,tableposition=top]{caption}
 
 \usepackage{listings}
-  \usepackage{courier}
+\usepackage{courier}
  \lstset{
          language=C,
          basicstyle=\footnotesize\ttfamily,
@@ -32,12 +32,12 @@
  
  \addto\captionsitalian{%
  	\renewcommand{\lstlistingname}{Code}}
-
-\setcounter{tocdepth}{3}
-\setcounter{secnumdepth}{3}
-
-\usepackage{amsmath}
-
+         
+         \setcounter{tocdepth}{3}
+         \setcounter{secnumdepth}{3}
+         
+         \usepackage{amsmath}
+         
 \usepackage{framed}
 
 \begin{document}
@@ -52,6 +52,7 @@
 
 \tableofcontents
 
+\sloppy
 \input{parts/chapter1}
 \input{parts/chapter2}
 \input{parts/chapter3}
