--- a/latex_thesis/document.tex
+++ b/latex_thesis/document.tex
@@ -1,45 +1,36 @@
 \documentclass[12pt,a4paper,openany,oneside]{book}
 
+% Packages
 \usepackage{hyperref}
 \usepackage[english]{babel}
-
-\usepackage[utf8x]{inputenc} %Linux
-
+\usepackage[utf8x]{inputenc}
 \usepackage{graphicx}
 \usepackage[font=small,labelfont=bf,tableposition=top]{caption}
-
 \usepackage{listings}
 \usepackage{courier}
- \lstset{
-         language=C,
-         basicstyle=\footnotesize\ttfamily,
-         numbers=left,           
-         numberstyle=\tiny,       
-         numbersep=5pt,        
-         tabsize=5,                 
-         extendedchars=true,         
-         breaklines=true,
-         keywordstyle=\textbf,           
-         stringstyle=\color{white}\ttfamily,
-         showspaces=false,       
-         showtabs=false,           
-         xleftmargin=17pt,
-         framexleftmargin=17pt,
-         framexrightmargin=5pt,
-         framexbottommargin=4pt,
-         showstringspaces=false          
- }
- 
- \addto\captionsitalian{%
- 	\renewcommand{\lstlistingname}{Code}}
-         
-         \setcounter{tocdepth}{3}
-         \setcounter{secnumdepth}{3}
-         
-         \usepackage{amsmath}
-         
+\usepackage{titlesec}
+\usepackage{amsmath}
 \usepackage{framed}
+\usepackage{fancyhdr}
 
+% Fancyhdr setup
+\pagestyle{fancy}
+\fancyhf{}
+\fancyfoot[C]{\thepage} % Center page number in footer
+
+% Chapter formatting
+\titleformat{\chapter}[hang]
+  {\normalfont\LARGE\bfseries}
+  {\thechapter}
+  {30pt}
+  {\LARGE}                    
+
+\addto\captionsenglish{
+  \renewcommand{\lstlistingname}{Code}}
+\setcounter{tocdepth}{3}
+\setcounter{secnumdepth}{3}
+
+% Document starts
 \begin{document}
 
 \input{parts/front}
@@ -48,17 +39,16 @@
 \title{Benchmarking Stateful Fuzzers over Lighttpd}
 \author{Leonardo Cantarella}
 
+\sloppy
 \input{parts/abstract}
 
 \tableofcontents
 
-\sloppy
 \input{parts/chapter1}
 \input{parts/chapter2}
 \input{parts/chapter3}
 \input{parts/chapter4}
 \input{parts/chapter5}
-
 \input{parts/conclusion}
 
 \newpage
