--- a/latex_thesis/parts/chapter2.tex
+++ b/latex_thesis/parts/chapter2.tex
@@ -1,87 +1,88 @@
-\chapter{State of Art}
+\chapter{Background}
 
 \section{Introduction to Fuzzing}
-Fuzzing, also known as fuzz testing, is a software testing technique used to discover coding errors and security vulnerabilities by inputting large volumes of random data, known as fuzz, into the system to cause unexpected behaviors. The primary objective of fuzzing is to find vulnerabilities such as buffer overflows, memory leaks, and other security weaknesses that could be exploited by attackers.
-
-Fuzzing is effective due to its ability to automate the generation of test cases and to focus on areas of code that may not be exercised by traditional testing methods. It is particularly useful for applications with complex input grammars, where manually generating test cases would be infeasible.
+Fuzzing, or fuzz testing, is a software testing technique that includes feeding a huge amount of random data into the system, called SUT (System Under Test), to find unprecedented responses and reveal major programming errors, along with key security vulnerabilities. The primary objective of fuzzing is to identify vulnerabilities such as buffer overflows, memory leaks, and other security weaknesses that can be exploited by attackers.
+\\The success of fuzzing is based on its capabilities for automatic test case generation and for focusing its attention on portions of programs that otherwise would not have been tested by other more traditional testing technique.
+\\Indeed, it is particularly effective for applications with complex input grammars, where manual test case creation would be impracticable.
 
 \subsection{Types of Fuzzing Techniques}
-There are several fuzzing techniques, each tailored to specific applications and objectives:
+Fuzzing methodologies vary, and there exist a lot for different applications and purposes:
 
 \begin{itemize}
-    \item \textbf{Black-box Fuzzing}: Generates inputs without any knowledge of the application's internal structure. It is easy to deploy but often less efficient due to the lack of internal feedback.
+    \item \textbf{Black-box Fuzzing}: This is a technique of generating inputs without prior knowledge of the internal structure of an application. It is easy to deploy but often less efficient as there is no internal feedback.
     
-    \item \textbf{White-box Fuzzing}: Uses detailed information about the application's source code, such as control flow and data flow, to generate test cases that maximize code coverage. This approach often involves complex static and dynamic analysis techniques.
+    \item \textbf{White-box Fuzzing}: This is one of those techniques that rely heavily on source code intuition, such as control flow and data flow, to provide maximum code coverage with test case generation. The approach often employs some sort of complex static and dynamic analysis methodologies.
     
-    \item \textbf{Grey-box Fuzzing}: Combines elements of both black-box and white-box fuzzing, using partial knowledge about the application's internals (e.g., code coverage feedback) to guide input generation. It balances simplicity with effectiveness and is exemplified by tools like AFL (American Fuzzy Lop).
+    \item \textbf{Grey-box Fuzzing}: It's a strategy that combines the various merits of black-box and white-box fuzzing. It brings in partial knowledge about internal application details, and code coverage feedback guiding the generation of inputs. It balances simplicity with effectiveness, and an example might be the family of tools called AFL (American Fuzzy Lop).
     
-    \item \textbf{Mutation-based Fuzzing}: Creates new inputs by randomly mutating existing ones, without requiring knowledge of the input format. It is versatile but may struggle with applications that require highly structured inputs.
+    \item \textbf{Mutation-based Fuzzing}: This generates new inputs through random mutations of existing inputs. It requires no knowledge about the structure of the inputs but is often a lot weaker compared with other generations for applications requiring highly structured inputs.
     
-    \item \textbf{Generation-based Fuzzing}: Generates inputs from scratch based on a formal specification of the input format, such as a grammar or protocol description. It is particularly effective for applications that require complex or structured inputs.
+    \item \textbf{Generation-based Fuzzing}: This builds the inputs from scratch, based on a formal characterization of the input format, grammar or protocol specification. It has proved quite effective in applications where the inputs have to be complex or systematically structured.
 \end{itemize}
 
 \section{Stateful Fuzzing: Concepts and Challenges}
-\textit{Stateful fuzzing} extends traditional fuzzing techniques by incorporating state-awareness. Traditional fuzzing often treats each input as an independent test case, but stateful fuzzing considers the application's internal state and how this state may affect the processing of subsequent inputs. This is particularly important for applications that maintain complex state information, such as network servers, databases, and interactive applications.
+\textit{Stateful fuzzing} adds state awareness to traditional fuzzing methods. Traditional fuzzing approaches treat every input individually as a test case, but stateful fuzzing considers an application's internal state and how that state might affect subsequent inputs handling. This becomes particularly critical for applications that handle complex state information, such as network servers, databases, and interactive applications.
 
 \subsection{Understanding Stateful Applications}
-Stateful applications maintain a state across multiple interactions or sessions. For instance, a network server may keep track of the connection status, authentication states, session identifiers, or application-specific state information. These states influence how inputs are processed and can affect the application's behavior over time. Proper handling of state transitions is critical for both security and reliability, as state-dependent bugs can lead to vulnerabilities such as unauthorized access, denial of service (DoS), or data corruption.
-
-Stateful fuzzers aim to model and explore these state transitions by generating sequences of inputs that mimic real-world usage scenarios, while tracking the state changes to ensure comprehensive testing of all possible state transitions.
+Stateful applications maintain some sort of state across multiple interactions or sessions. Examples include network servers maintaining connection states, authentication states, session identifiers, or other state information specific to an application. These states could contribute significantly to the processing of inputs and, therefore, influence the behavior of the application over time.
+Good practice in state transition management is important for security as well as reliability: bugs dependent on state can lead to vulnerabilities such as unauthorized access, DoS, or corruption of data.
+\\Stateful fuzzers attempt to model and explore such state transitions through the generation of input sequences that mimic valid usage scenarios while monitoring state changes concurrently to ensure adequate coverage of all possible state transitions.
 
 \subsection{Key Techniques in Stateful Fuzzing}
 Stateful fuzzing involves several advanced techniques that distinguish it from traditional fuzzing approaches:
 
 \begin{itemize}
-    \item \textbf{State Modeling}: Construction of a model representing the application's state machine, either by analyzing source code, observing real interactions, or employing machine learning techniques. This model helps guide test case generation.
+    \item \textbf{State Modeling}: The process of building a model representing an application state machine by reverse engineering source code, observing real interactions, or guide test case generation in conjunction with machine learning techniques.
     
-    \item \textbf{State Tracking}: Monitoring the application's state throughout multiple inputs, which may involve tracking network traffic, system calls, or internal state variables.
+    \item \textbf{State Tracking}: This involves tracking the state of the application across successive inputs; indeed, tracking of network traffic, system calls, or internal state variables.
     
-    \item \textbf{Feedback Mechanisms}: Utilizing feedback mechanisms to prioritize test cases that explore new states or code paths, thereby improving the efficiency of the fuzzing process.
+    \item \textbf{Feedback Mechanisms}: With feedback mechanisms, one can prioritize those test cases that tend to explore new states or code paths; hence, the general efficiency of fuzzing can be improved.
     
-    \item \textbf{Sequence Generation}: Creating sequences of inputs that accurately reflect real-world interactions with the application, essential for discovering vulnerabilities that depend on specific input sequences or state changes.
+    \item \textbf{Sequence Generation}: It is the need to generate input sequences to properly model actual use, since the findings of vulnerabilities often depend on specific sequences or state transitions.
     
-    \item \textbf{Learning-Based Approaches}: Some fuzzers employ machine learning or heuristic approaches to dynamically learn the application's state machine structure, allowing the fuzzer to adapt and improve over time.
+    \item \textbf{Learning-Based Approaches}: Certain fuzzers utilize machine learning or heuristic methodologies to dynamically ascertain the structural configuration of the application's state machine, thereby enabling the fuzzer to adjust and enhance its efficacy progressively.
 \end{itemize}
 
 \subsection{Challenges in Stateful Fuzzing}
-Stateful fuzzing poses several challenges that need to be addressed for effective testing:
+Successfully performing testing is fraught with several challenges in stateful fuzzing:
 
 \begin{itemize}
-    \item \textbf{State Explosion}: As the number of possible states in an application grows, the complexity of the fuzzing process increases exponentially. This \textit{state explosion} problem necessitates strategies such as state abstraction, pruning, or prioritization to manage the complexity.
+    \item \textbf{State Explosion}:As in real life, an application itself may have a number of possible states, and with more states, a risk for exponential growth in process complexity increases. In this case, state abstraction, pruning, or prioritization counters the \textit{state explosion} in an essential way.
     
-    \item \textbf{Protocol Complexity}: Understanding complex protocols or state machines is often required to generate meaningful input sequences, which demands significant domain-specific knowledge or advanced learning algorithms.
+    \item \textbf{Protocol Complexity}: Generating meaningful input sequences can involve deep knowledge of complex protocols or state machines. This often includes much domain-specific knowledge or even advanced algorithms.
     
-    \item \textbf{Performance Overhead}: The need to track state and generate sequences of inputs can lead to substantial computational overhead, impacting the performance of the fuzzing process.
-    
-    \item \textbf{Handling Non-Deterministic Behavior}: Many stateful applications exhibit non-deterministic behavior due to factors such as concurrency, external inputs, or timing variations, complicating the reproduction of bugs and consistency of fuzzing results.
+    \item \textbf{Performance Overhead}: To date, state tracking performed by the application and input sequence generation can cause significant computational costs, hence slowing down the fuzzing process.
+
+    \item \textbf{Handling Non-Deterministic Behavior}: The nondeterministic behavior of stateful applications often results from concurrency, differences in external inputs, or even timing variations. These factors therefore make the reproduction of bugs and receiving consistent fuzzing results usually difficult.
+
 \end{itemize}
 
 \section{Lighttpd: A Case Study for Stateful Fuzzing}
-\textit{Lighttpd} is an open-source web server optimized for high performance with a low memory footprint. Designed to handle a large number of parallel connections, Lighttpd is well-suited for environments with limited resources or high concurrency requirements. Its modular architecture and support for advanced web protocols make it popular for embedded devices, cloud platforms, and high-traffic websites.
+\textit{Lighttpd} is an open-source web server optimized for performance with very low memory usage. It is designed to handle huge volumes of parallel connections with minimal overhead, making it particularly useful on systems with limited resources or those requiring a high degree of concurrency. Its modular design and support for advanced web protocols make it a popular choice for embedded systems, cloud computing platforms, and high-traffic websites.
 
-\subsection{Architectural Overview of Lighttpd}
-Lighttpd follows an event-driven architecture, which enables it to handle numerous requests concurrently. It uses an asynchronous I/O model that reduces the overhead associated with network connections, allowing it to scale efficiently under load. Some of the key features of Lighttpd include:
+\subsection{Overview of Lighttpd Architecture}
+Lighttpd operates on an event-driven architecture, which enables it to serve many requests concurrently. An asynchronous I/O framework is employed to minimize overhead in network connections, allowing the server to scale efficiently under varying workloads. The key features of Lighttpd include:
 
 \begin{itemize}
-    \item \textbf{Modular Design}: Offers a range of modules that provide various functionalities, such as URL rewriting, HTTP compression, SSL/TLS, and WebSockets. This modular approach enables customization based on specific needs.
+    \item \textbf{Modular Design}: Provides a series of modules for implementing functions like URL rewriting, HTTP compression, SSL/TLS, and WebSockets. The modular design allows for customization based on specific needs.
     
-    \item \textbf{Protocol Support}: Supports multiple protocols, including HTTP/1.1, HTTPS, FastCGI, SCGI, and HTTP/2, making it versatile for different web applications and services.
+    \item \textbf{Protocol Support}: Out of the box, it supports HTTP/1.1, HTTPS, FastCGI, SCGI, and HTTP/2, making it suitable for a wide range of web applications and services.
     
-    \item \textbf{Security Features}: Built-in security features include support for TLS/SSL encryption, defense against denial-of-service attacks, and various authentication mechanisms.
+    \item \textbf{Security Attributes}: Advanced integrated security features include TLS/SSL encryption, prevention of denial-of-service attacks, and multiple authentication options.
 \end{itemize}
 
 \subsection{Relevance of Lighttpd for Stateful Fuzzing}
-Lighttpd's state management complexity, particularly in protocol handling, makes it an ideal candidate for stateful fuzzing:
+The complexity of state management in Lighttpd, especially in protocol processing, makes it an ideal candidate for stateful fuzzing:
 
 \begin{itemize}
-    \item \textbf{State Management Complexity}: Handles multiple client connections concurrently, each with potentially different states based on protocol version, authentication, request type, and other factors.
+    \item \textbf{State Management Complexity}: Responsible for managing numerous concurrent client connections, each with its own state depending on protocol versioning, authentication, and request type.
     
-    \item \textbf{Protocol Vulnerabilities}: Due to its support for multiple web protocols, Lighttpd is vulnerable to a range of potential attacks that could arise from improper state handling, such as request smuggling, race conditions, and state confusion attacks.
+    \item \textbf{Protocol Vulnerabilities}: The support for multiple web protocols exposes Lighttpd to a range of potential attacks due to improper state management, such as request smuggling, race conditions, and state confusion attacks.
     
-    \item \textbf{Modular Configuration}: Its modular architecture and numerous configurations present unique states or behaviors, which can be thoroughly tested using stateful fuzzing.
+    \item \textbf{Modular Configuration}: Its modular architecture and extensive array of configuration options facilitate the emergence of distinct states or behaviors, which can be effectively evaluated through stateful fuzzing techniques.
 \end{itemize}
 
-\section{Overview of Benchmarking Tools: AFLNet, ChatAFL, and Fallaway}
+\section{Fuzzers Overview: AFLNet, ChatAFL, and Fallaway}
 
 For this thesis, three stateful fuzzers—AFLNet, ChatAFL, and Fallaway—will be benchmarked over Lighttpd to evaluate their effectiveness in uncovering state-dependent vulnerabilities.
 
@@ -93,6 +94,3 @@ For this thesis, three stateful fuzzers—AFLNet, ChatAFL, and Fallaway—will b
 
 \subsection{Fallaway}
 \textit{Fallaway} is a stateful fuzzer that combines static analysis with dynamic state tracking to explore the state space of the target application. It constructs a preliminary model of the application's state machine through static analysis and refines this model during dynamic fuzzing sessions. Fallaway's hybrid approach is particularly suited for applications with large or poorly documented state machines.
-
-\section{Summary}
-Stateful fuzzing represents a significant advancement in software testing and security, particularly for applications with complex state management requirements like Lighttpd. By considering the internal state of the application, stateful fuzzers such as AFLNet, ChatAFL, and Fallaway can more effectively identify vulnerabilities that would be missed by traditional fuzzing techniques. The following chapters will provide a detailed benchmarking of these tools over Lighttpd to evaluate their effectiveness and identify areas for further improvement.
