writed also second and third chapter, should be completed

--- a/latex_thesis/parts/abstract.tex
+++ b/latex_thesis/parts/abstract.tex
@@ -3,4 +3,4 @@
 \large Abstract
 \end{center}}
 
-This thesis compare three stateful fuzzers—Fallaway, AFLNet, and ChatAFL—by employing them against Lighttpd, a high-performance web server. The significance of stateful fuzzing lies in its ability to identify vulnerabilities in applications characterized by intricate internal states, which may be overlooked by conventional fuzzing techniques. This research compares these instruments with regard to code coverage, crash detection, and the different kinds of vulnerabilities. These results provide enlightening insights into the strengths and weaknesses of each fuzzer, hence guiding selection and improvements of stateful fuzzing approaches for modern software systems.
+This thesis compare three stateful fuzzers—Fallaway, AFLNet, and ChatAFL—by employing them against Lighttpd, a high-performance web server. The significance of stateful fuzzing lies in its ability to identify vulnerabilities in applications characterized by intricate internal states, which may be overlooked by conventional fuzzing techniques. This research compares these instruments with regard to code coverage, crash detection, and the different kinds of eventually vulnerabilities. These results provide enlightening insights into the strengths and weaknesses of each fuzzer, hence guiding selection and improvements of stateful fuzzing approaches for modern software systems.
