--- a/latex_thesis/bibliography.bib
+++ b/latex_thesis/bibliography.bib
@@ -1,4 +1,11 @@
-@ONLINE{iplab,
-title = {IPLab, 2015.},
-howpublished = {\url{http://iplab.dmi.unict.it/}}
-}
+@inproceedings{AFLNet,
+author={Van{-}Thuan Pham and Marcel B{\"o}hme and Abhik Roychoudhury},
+title={AFLNet: A Greybox Fuzzer for Network Protocols},
+booktitle={Proceedings of the 13rd IEEE International Conference on Software Testing, Verification and Validation : Testing Tools Track},
+year={2020},}
+
+@inproceedings{chatafl,
+author={Ruijie Meng and Martin Mirchev and Marcel B\"{o}hme and Abhik Roychoudhury},
+title={Large Language Model guided Protocol Fuzzing},
+booktitle={Proceedings of the 31st Annual Network and Distributed System Security Symposium (NDSS)},
+year={2024},}
