--- a/latex_thesis/document.tex
+++ b/latex_thesis/document.tex
@@ -12,11 +12,17 @@
 \usepackage{amsmath}
 \usepackage{framed}
 \usepackage{fancyhdr}
+\usepackage{verbatim}
+\usepackage{float}
+\usepackage{adjustbox}
+\usepackage{fancyvrb}
 
 % Fancyhdr setup
 \pagestyle{fancy}
 \fancyhf{}
 \fancyfoot[C]{\thepage} % Center page number in footer
+
+\renewcommand{\headrulewidth}{0pt}
 
 % Chapter formatting
 \titleformat{\chapter}[hang]
@@ -24,6 +30,14 @@
   {\thechapter}
   {30pt}
   {\LARGE}                    
+
+  % Configure the listings environment for automatic line wrapping
+\lstset{
+    basicstyle=\footnotesize\ttfamily,
+    breaklines=true,               % Break long lines
+    columns=flexible,              % Adjust column widths for better wrapping
+    keepspaces=true,               % Preserve spaces for readability
+}
 
 \addto\captionsenglish{
   \renewcommand{\lstlistingname}{Code}}
@@ -35,7 +49,6 @@
 
 \input{parts/front}
 
-\bibliographystyle{unsrt}
 \title{Benchmarking Stateful Fuzzers over Lighttpd}
 \author{Leonardo Cantarella}
 
@@ -50,8 +63,10 @@
 \input{parts/chapter4}
 \input{parts/chapter5}
 \input{parts/conclusion}
+\input{parts/futureworks}
 
 \newpage
-\addcontentsline{toc}{chapter}{Bibliography}
+\bibliographystyle{unsrt}
+\renewcommand{\bibname}{References}
 \bibliography{bibliography}
 \end{document}
