--- a/latex_thesis/parts/chapter1.tex
+++ b/latex_thesis/parts/chapter1.tex
@@ -3,11 +3,6 @@
 As the software systems are getting increasingly complex, ensuring their robustness and security has turned out to be a serious challenge. In this scenario, fuzzing has emerged as a powerful technique in the identification of security vulnerabilities and defects, which may remain elusive for traditional testing techniques. Fuzzing involves the generation of random test inputs in order to see how the software reacts to unexpected or malformed input data, looking for problems, such as crashes, unexpected behaviour, or security vulnerabilities.
 \\The evolution of fuzzing methodologies has significantly enhanced their effectiveness for a wide range of applications. Traditional fuzzers typically focus on generating random inputs and observing the software responses. However, for applications that maintain internal states across several interactions, such as web servers or networked applications, this approach can be insufficient. These stateful applications call for more sophisticated fuzzing techniques that take into account the interaction between different states and transitions.
 \\Stateful fuzzing is an advanced approach for solving the problems of applications that rely on state management. Whereas in stateless fuzzing, each input is considered a unique event, stateful fuzzing emulates the flow of activities along with the succeeding changes in the state of an application. It includes the generation of inputs which consider previous interactions and what these have done to the state of the application, hence providing a more realistic and deeper testing process.
-\\An instance of a stateful application is Lighttpd, an open-source web server recognized for its effectiveness and ability to scale. Lighttpd is engineered to manage a substantial number of concurrent connections and accommodates multiple network protocols, rendering it a sophisticated system with considerable state management demands. Assessing Lighttpd offers a chance to scrutinize stateful fuzzing methodologies owing to its complex architecture and variable behaviour.
-\\This thesis focuses on the benchmarking of stateful fuzzers to ascertain their efficiency in detecting all the existing vulnerabilities in Lighttpd. Our evaluation targets three such prominent stateful fuzzers: Fallaway, AFLNet, and ChatAFL. Each of them has a different approach toward stateful fuzzing:
-\begin{itemize}
-    \item \textbf{Fallaway}: Fallaway couples static analysis with dynamic state tracking, aiming at an effective exploration of large state spaces.
-    \item \textbf{AFLNet}: AFLNet extends the capabilities of the AFL fuzzer for stateful network protocols, increasing its power in testing complex network interactions.
-    \item \textbf{ChatAFL}: ChatAFL uses machine learning methodologies to improve fuzzing strategies and adapt to the application behaviour.
-\end{itemize}
-The key contribution of this paper is to compare these fuzzers based on several metrics, including code path coverage, different crashes, and other types of vulnerabilities they were able to find. By analyzing the performance of all these tools, we aim to report on various strengths and weaknesses of each, which gives necessary suggestions for improving stateful fuzzing techniques and enhancing the security of modern software systems. This introductory section creates a base for deep research in stateful fuzzing methodologies and their realization in real systems, setting the base for further chapters examining extensive tests and results.
+\\An instance used in this thesis is Lighttpd, an open-source web server recognized for its effectiveness and ability to scale. Lighttpd is engineered to manage a substantial number of concurrent connections and accommodates multiple network protocols. Assessing Lighttpd offers a chance to scrutinize stateful fuzzing methodologies.
+\\This thesis focuses on the benchmarking of stateful fuzzers to ascertain their efficiency in coverage and detecting eventually vulnerabilities in Lighttpd. Our evaluation stateful fuzzers are: Fallaway, AFLNet, and ChatAFL. Each of them has a its own approach toward stateful fuzzing.
+By analyzing the performance of all these tools, we aim to report on various strengths and weaknesses of each, which gives necessary suggestions for improving stateful fuzzing techniques and enhancing the security of modern software systems. This introductory section creates a base for deep research in stateful fuzzing methodologies and their realization in real systems, setting the base for further chapters examining tests and results.
