expansion of background with more information and graphs

--- a/latex_thesis/bibliography.bib
+++ b/latex_thesis/bibliography.bib
@@ -9,3 +9,9 @@ author={Ruijie Meng and Martin Mirchev and Marcel B\"{o}hme and Abhik Roychoudhu
 title={Large Language Model guided Protocol Fuzzing},
 booktitle={Proceedings of the 31st Annual Network and Distributed System Security Symposium (NDSS)},
 year={2024},}
+
+@inproceedings{Fallaway,
+author={TODO},
+title={TODO},
+booktitle={TODO},
+year={2024},}
