--- a/latex_thesis/document.tex
+++ b/latex_thesis/document.tex
@@ -52,8 +52,14 @@
 \title{Benchmarking Stateful Fuzzers over Lighttpd}
 \author{Leonardo Cantarella}
 
+\newpage
+\thispagestyle{empty}
+\mbox{}
+\newpage
+
 \sloppy
 \input{parts/abstract}
+\setcounter{page}{1}
 
 \tableofcontents
 
