--- a/latex_thesis/parts/chapter4.tex
+++ b/latex_thesis/parts/chapter4.tex
@@ -2,3 +2,7 @@
 How they works, how they are different, how they are similar, how they are better, how they are worse, etc.
 Script, dockerfile, etc.
 Replayer.
+
+%spiegare setup e eventuali options
+%AFLNet ChatAFL Fallaway comparison of components
+% check https://github.com/ChatAFLndss/ChatAFL/blob/master/benchmark/subjects/HTTP/Lighttpd1/run.sh
